sandbox/output
ProfitJava6.java:26: error: cannot find symbol
            LoggerFunctions.info(logger),
            ^
  symbol:   variable LoggerFunctions
  location: class ProfitJava6
ProfitJava6.java:34: error: incompatible types: unexpected return value
    return profit;
           ^
ProfitTest.java:33: error: 'void' type not allowed here
        assertEquals(18845.9, ProfitJava6.calculate(), 0.001);
                                                   ^
Timing.java:48: error: no suitable method found for timed(String,MyFunction<String,Void>,MySupplier<A#1>)
    return timed(description, DO_NOTHING, code);
           ^
    method Timing.<A#2>timed(String,Supplier<A#2>) is not applicable
      (cannot infer type-variable(s) A#2
        (actual and formal argument lists differ in length))
    method Timing.<A#3>timed(String,Consumer<String>,Supplier<A#3>) is not applicable
      (cannot infer type-variable(s) A#3
        (argument mismatch; MyFunction<String,Void> cannot be converted to Consumer<String>))
  where A#1,A#2,A#3 are type-variables:
    A#1 extends Object declared in method <A#1>timedJava6(String,MySupplier<A#1>)
    A#2 extends Object declared in method <A#2>timed(String,Supplier<A#2>)
    A#3 extends Object declared in method <A#3>timed(String,Consumer<String>,Supplier<A#3>)
4 errors
